<resources>
    <string name="app_name">Zappy</string>
    <string name="loading">Loading</string>
    <string name="game">Game</string>
    <string name="music">Music</string>
    <string name="story">Story</string>
    <string name="home">Home</string>
    <string name="video_title">Video</string>
    <string name="skip">Skip\n</string>
    <string name="welcome">Welcome to\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>